Fix T52741: Follow track with depth object crashes Blender with new depsgraph